# ArborY

./: CMakeLists.txt  README.md  cgall.cpp  compile.sh  distances.h  program.cpp  segment_segment.h  vector.h
include/: capsule_capsule.h  distances.h  segment_segment.h  triangle_triangle.h  vector.h
